genisoimage >= 1.1.4 can finally write files bigger than 4 gb. :)

BUG: 142872

svn path=/trunk/extragear/multimedia/k3b/; revision=657481